--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.0",
     "react-jvectormap": "^0.0.16",
+    "react-loader-spinner": "^6.1.6",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
