--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.0",
     "react-jvectormap": "^0.0.16",
