--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "uuid": "^10.0.0",
     "yup": "^1.3.3"
   }
 }
