--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typescript": "5.1.6",
     "uuid": "^10.0.0",
     "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
